<resources>
    <string name="app_name">Лінина Любов</string>
    <string name="about_lina">Про Ліну</string>
    <string name="about_project">Про проект</string>
    <string name="share">Розповісти друзям</string>
    <string name="video_title">Фрагмент з виступу Ліни Костенко \nна її творчому вечорі у Харкові \n7 лютого 2011 року</string>
    <string name="continue_now">Пропустити</string>
    <string name="go_to_website">Перейти на сайт</string>
    <string name="facebook">На Фейсбук</string>
    <string name="viber">Через Вайбер</string>
    <string name="splash_info">Лінa Костенко</string>
    <string name="splash_info_zbirka">Збірка віршів про любов</string>
    <string name="splash_copyright">Ідея та розробка проекту: \nЛітературна Агенція Марини Кузьменко</string>
    <string name="instagram">Instagram</string>
    <string name="about_lina_disclaimer">У розділі використані матеріали, які є публічно доступними на офіційних сайтах українських видань \"День\", \"Дзеркало тижня\" та інформаційному ресурсі Wikipedia.</string>
    <string name="lina_kostenko"> &#169; Ліна Костенко</string>
    <string name="title1">Моя любове! Я перед тобою</string>
<string name="poem1">
Моя любове! Я перед тобою.\n
Бери мене в свої блаженні сни.\n
Лиш не зроби слухняною рабою,\n
Не ошукай і крил не обітни!\n
    \n
Не допусти, щоб світ зійшовся клином,\n
і не присни, для чого я живу.\n
Даруй мені над шляхом тополиним\n
важкого сонця древню булаву.\n
        \n
Не дай мені заплутатись в дрібницях,\n
не розміняй на спотички доріг,\n
бо кості перевернуться в гробницях\n
гірких і гордих прадідів моїх.\n
        \n
І в них було кохання, як у мене,\n
і від любові тьмарився їм світ.\n
І їх жінки хапали за стремена,\n
та що поробиш,— тільки до воріт.\n
        \n
А там, а там… Жорстокий клекіт бою\n
і дзвін мечів до третьої весни…\n
Моя любове! Я перед тобою.\n
Бери мене в свої блаженні сни.
</string>
<string name="title2">Світлий сонет</string>
    <string name="poem2">
        Як пощастило дівчині в сімнадцять,\n
в сімнадцять гарних, неповторних літ!\n
Ти не дивись, що дівчинка сумна ця.\n
Вона ридає, але все як слід.\n
        \n
Вона росте ще, завтра буде вищенька.\n
Але печаль приходить завчасу.\n
Це ще не сльози — це квітуча вишенька,\n
що на світанку струшує росу.\n
        \n
Вона в житті зіткнулась з неприємістю:\n
хлопчина їй не відповів взаємністю.\n
І то чому: бо любить іншу дівчину,\n
а вірність має душу неподільчиву.\n
        \n
Ти не дивись, що дівчинка сумна ця.\n
Як пощастило дівчинці в сімнадцять!</string>
<string name="title3">І як тепер тебе забути?</string>
    <string name="poem3">І як тепер тебе забути?\n
Душа до краю добрела.\n
Такої дивної отрути\n
я ще ніколи не пила.\n
        \n
Такої чистої печалі,\n
Такої спраглої жаги,\n
Такого зойку у мовчанні,\n
Такого сяйва навкруги.\n
\n
Такої зоряної тиші.\n
Такого безміру в добі!..\n
Це, може, навіть і не вірші,\n
А квіти, кинуті тобі.</string>
<string name="title4">Двори стоять у хуртовині айстр</string>
    <string name="poem4">
        Двори стоять у хуртовині айстр.\n
Яка рожева й синя хуртовина!\n
Але чому я думаю про Вас?\n
Я Вас давно забути вже повинна.\n\n
Це так природно — відстані і час.\n
Я вже забула. Не моя провина,—\n
то музика нагадує про Вас,\n
то раптом ця осіння хуртовина.\n\n
Це так природно — музика і час,\n
і Ваша скрізь присутність невловима.\n
Двори стоять у хуртовині айстр.\n
Яка сумна й красива хуртовина!
    </string>
<string name="title5">Не треба класти руку на плече</string>
    <string name="poem5">
        Не треба класти руку на плече.\n
Цей рух доречний, може, тільки в танці.\n
Довіра — звір полоханий, втече.\n
Він любить тиху паморозь дистанцій.\n\n

Він любить час. Хвилини. Дні. Роки.\n
Він дивний звір, він любить навіть муку.\n
Він любить навіть відстань і розлуку.\n
Але не любить на плечі руки.\n\n

У цих садах, в сонатах солов\'їв,\n
Він чує тихі кроки браконьєра.\n
Він пастки жде від погляду, від слів,\n
І цей спектакль йому вже не прем’єра.\n
\n
Душі людської туго і тайго!\n
Це гарний звір, без нього зле живеться.\n
Але не треба кликати його.\n
Він прийде сам і вже не відсахнеться.
    </string>
<string name="title6">Лейтмотив щастя</string>
    <string name="poem6">
        Мені страшно признатися: я щаслива.\n
Минають роки, а ти мені люб.\n
Шаліє любові тропічна злива –\n
землі і неба шалений шлюб.\n
\n
Вколисана в ніч, тобою омита,\n
хитає мене серед білого дня.\n
Ковшами самотності сплачене мито\n
за всі незнання і за всі навмання.\n
\n
Нещасть моїх золоті обжинки.\n
Душа моя, аж тепер сп\'янись.\n
Ох, я не Фауст. Я тільки жінка.\n
Я не скажу: \"Хвилино, спинись!\"\n
\n
Хвилино, будь!\n
Лише не хвилиною,\n
а цілим життям – хвилюй і тривож!\n
Аж поки мене понесуть із калиною\n
туди… ну звідки… Тоді вже що ж…\n
    </string>
    <string name="title7">Очима ти сказав мені: люблю</string>
    <string name="poem7">
        Очима ти сказав мені: люблю.\n
Душа складала свій тяжкий екзамен.\n
Мов тихий дзвін гірського кришталю,\n
несказане лишилось несказанним.\n
        \n
Життя ішло, минуло той перон.\n
гукала тиша рупором вокзальним.\n
Багато слів написано пером.\n
Несказане лишилось несказанним.\n
        \n
Світали ночі, вечоріли дні.\n
Не раз хитнула доля терезами.\n
Слова як сонце сходили в мені.\n
Несказане лишилось несказанним.\n
    </string>
    <string name="title8">Не говори печальними очима</string>
    <string name="poem8">
        Не говори печальними очима\n
те, що не можуть вимовить слова.\n
Так виникає ніжність самочинна.\n
Так виникає тиша грозова.\n
\n
Чи ти мій сон, чи ти моя уява,\n
чи просто чорна магія чола…\n
Яка між нами райдуга стояла!\n
Яка між нами прірва пролягла!
    </string>
    <string name="title9">Ти - загадка моя</string>
    <string name="poem9">
Ти - загадка моя, ти - сфінкс моєї долі,\n
моїх пекельних кіл склепіння голубе.\n
Розгублений актор, що раптом збився з ролі,\n
ти п\'єсу завалив, але зіграв себе.\n\n

О боже мій, які побачила я очі!\n
Як голос твій лунав, лишався на віки.\n
А п\'єса собі йшла… \nА ми були, як зодчі,\n
що зводили свій храм без дотику руки.\n\n

І що мені той текст, і що мені ті ролі?\n
І хай собі крізь люк провалиться суфлер.\n
Ти загадка моя, ти сфінкс моєї долі.\n
Ми зводили свій храм. \n Він є у нас тепер.\n\n

Невидимий очам, без брами і паркану.\n
Там тільки голос твій, твій голос та ім\'я.\n
І коли там душа, вона недоторканна.\n
Ти загадка моя… \nти вигадка моя…
    </string>
    <string name="drozdovsky_quote">Творчість Ліни Костенко ніколи не була експериментальною, авангардною, з проявами надмірного штукарства. У ній особлива простота, притаманна тому, що ми асоціюємо зі "справжнім" і "людським" […] \n\nЛіна Костенко ніколи не дозволяє собі порожнечі. Не дозволяє зайвих пауз, зайвих фраз. Вона надзвичайно ретельно пише і говорить. Не дозволяє собі халтури. Але її позиція - це позиція людини, яка мусить бути впевненою в собі. Через це багатьом вона здається егоцентричною. Це не его-позиція, це просто спосіб ствердити якусь істину. Таких людей, як Ліна Костенко, одиниці. Вона має право говорити те, що вона вважає.</string>
    <string name="drozdovsky_name">Дмитро \nДроздовський</string>
    <string name="drozdovsky_title">літературний критик</string>
    <string name="pashko_quote">Поезія Ліни Костенко в часи безвір’я повертала людям віру у слово, повертала такі поняття як гідність, національна честь, самоповага, додавала впевненості й надії. Вона сама своїм життям, своєю поведінкою була і залишається прикладом нонконформізму і безстрашності</string>
    <string name="pashko_name">Атена Пашко</string>
    <string name="pashko_title">поетеса</string>
    <string name="stus_quote">Моя Ліна Костенко… Це, може, не така Ліна Костенко, яка є насправді, але це ніби символ української жінки. Вона нонкомформістична. Вона жіночна. Вона чуттєва. Вона абсолютно цілісна. Це жінка, яка (якщо говорити сьогоднішніми категоріями) знає, що таке кохання, відчуває його і абсолютно байдужа до того, що зараз рекламується ЗМІ і що можна окреслити словом «секс». Це людина, яка не просто поневажає, а зневажає все несправжнє і синтетичне. Ось і все</string>
    <string name="stus_name">Дмитро Стус </string>
    <string name="stus_title">редактор журналу «Київська Русь»</string>
    <string name="andrukhovych_quote">Це дуже голосно сказано, але поезія, напевно, і полягає в тому, що деякі речі мусять бути сказаними голосніше. \nЛіна Костенко навчила українську поезію інтонаціям. Тобто виразному вимовлянню певних замовчуваних речей уголос.</string>
    <string name="andrukhovych_name">Юрій Андрухович </string>
    <string name="andrukhovych_title">письменник</string>
    <string name="kononenko_quote">ЛК як постать, попри її деяку неадекватність часові, яку, втім, багато хто пробачає, кваліфікуючи як «скромність» і «гідність», все одно є героїнею в українській культурі, традиційною героїнею, яка обороняє традиційні цінності: націю, родину, людську, зокрема чоловічу, гідність, право жінки на велике кохання із взаємністю. І в своїх нечастих з’явах на люди ЛК продовжує поводитися так, щоб не руйнувати цього іміджу, а навпаки — зміцнювати його.</string>
    <string name="kononenko_name">Євгенія Кононенко</string>
    <string name="kononenko_title">письменниця</string>
    <string name="dziuba_quote">Тривожно-напружений світ нашої сучасності в поезії Ліни Костенко позначений печаттю неповторного індивідуального переживання. Це слова долі, а не біографії. А доля говорить мовою вічних універсалій буття і духу людського. Тут — безмежність особистості, яка твориться і твориться, триває і триває, міниться і міниться, утверджує себе в духовному розростанні</string>
    <string name="dziuba_name">Іван Дзюба</string>
    <string name="dziuba_title">академік</string>
    <string name="pakhlovska_quote">Складно писати про рідну людину, коли у ніби звичайному спілкуванні з нею долаєш завжди відстань між історією культури — і історією своєї любові до цієї людини. Чи, точніше, коли історія культури стає «внутрішньою історією» стосунків. \nІ тоді так — п’єш з легендою чай, бурчиш на неї, щоб одяглася тепліше в холодну погоду. І водночас знаєш — усе, що нуртує людину в щоденному житті, переплавлюється в Слово, переходить в інший вимір, починає існувати в іншому часі. \nЗнаєш, що мама поруч — і всеприсутня: «Я дерево, я сніг, я все, що я люблю. І, може, це і є моя найвища сутність».</string>
    <string name="pakhlovska_name">Оксана Пахльовська </string>
    <string name="pakhlovska_title">дочка Ліни Костенко</string>
    <string name="about_project_text1">Хвилина майже офіційної та серйозної прози з-поміж рядків чудової поезії :).\n \nУ проекті \"Лінина Любов \" використані вірші Ліни Костенко, тексти яких є доступними для широкого загалу в мережі Інтернет. \n\nГрафічне оформлення її поезії створене на основі фоторобіт таких авторів: adriansquirrellphotography, alma_durand, andreavodiczkova, asfotosdabarbara, blueeeemint, gibrairf, gracyvillarreal, highfivetothat, jaq.dantas, nicolegrenier9152, needsupply, nkios, oljaryz, re__le__ve, saullomoreira, sofiaellar, strogovintage, vanellimelli.\n\nЛітературна Агенція з радістю надасть посилання на профілі творчості цих фотографів у соціальних мережах за додатковим запитом від вас.</string>
    <string name="about_project_text2">Проект реалізований Літературною Агенцією Марини Кузьменко у 2018 році.\n\nЛітературна Агенція популяризує українську літературу та допомагає україномовній поезії та прозі проникати у площину мобільних пристроїв та у серця нових генерацій літературолюбів. \n\nМи віримо, що читання поезії Ліни Василівни Костенко робить душі красивішими і примножує любов. Тож нехай любов і краса множиться, шериться і свайпиться у цьому світі. А ми будемо в цьому їй допомагати :). </string>
    <string name="about_project_website">Детальніше про наші літературно-мобільні проекти і про те, як сконтактуватися з нами, можна прочитати на офіційному веб-сайті Літературної Агенції.</string>
</resources>